[gd_scene load_steps=9 format=1]

[ext_resource path="res://scripts/Merchant.gd" type="Script" id=1]
[ext_resource path="res://img/merchant.png" type="Texture" id=2]
[ext_resource path="res://img/bazaar.png" type="Texture" id=3]
[ext_resource path="res://img/bazaarb.png" type="Texture" id=4]
[ext_resource path="res://fonts/Nanami.fnt" type="BitmapFont" id=5]
[ext_resource path="res://scenes/bazaar.tscn" type="PackedScene" id=6]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 10.0

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 10.0

[node name="Merchant" type="KinematicBody2D"]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 2, 0, 0, 2, 0, 25 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

transform/pos = Vector2( 0, 25 )
transform/scale = Vector2( 2, 2 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Area2D" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 7, 0, 0, 7, 0, 25 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="Trading" type="TextureButton" parent="Area2D"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -40.0
margin/top = -80.0
margin/right = 0.0
margin/bottom = -40.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
textures/pressed = ExtResource( 4 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="Trade" type="Label" parent="Area2D"]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 5.0
margin/top = -70.0
margin/right = 67.0
margin/bottom = -44.0
custom_fonts/font = ExtResource( 5 )
text = "Trade!"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]

transform/pos = Vector2( 0, 25 )
transform/scale = Vector2( 7, 7 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="TradeWindow" parent="CanvasLayer" instance=ExtResource( 6 )]

visibility/visible = false
margin/left = 290.0
margin/right = 1030.0

[connection signal="body_enter" from="Area2D" to="." method="_on_Area2D_body_enter"]

[connection signal="body_exit" from="Area2D" to="." method="_on_Area2D_body_exit"]

[connection signal="pressed" from="Area2D/Trading" to="." method="_on_Trading_pressed"]


